chore(lint): ban explicit 'any' everywhere except supabaseHelpers; add check-no-any script

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "package:win": "electron-builder --win",
     "package:all": "electron-builder",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "check:no-any": "node ./scripts/checkNoAny.cjs",
     "preview": "vite preview"
   },
   "dependencies": {
