--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
     "vite": "^5.1.6",
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
     "vite-plugin-electron": "^0.28.6",
     "vite-plugin-electron-renderer": "^0.14.5"
   },
